Fix small dark mode colors

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,8 +8,6 @@
     --foreground: 228 18% 11%;
     --card: 0 0% 100%;
     --card-foreground: 222 84% 5%;
-    --card-accent: 214 13% 89%;
-    --card-accent-foreground: 222 84% 5%;
     --popover: 0 0% 100%;
     --popover-foreground: 222 84% 5%;
     --primary: 210 63% 57%;
@@ -50,15 +48,13 @@
     --foreground: 240 9% 89%;
     --card: 228 10% 14%;
     --card-foreground: 240 9% 89%;
-    --card-accent: 233 6% 21%;
-    --card-accent-foreground: 240 9% 89%;
     --popover: 228 18% 11%;
     --popover-foreground: 240 9% 89%;
     --primary: 224 49% 70%;
     --primary-foreground: 228 18% 11%;
     --secondary: 217 52% 49%;
     --secondary-foreground: 240 9% 89%;
-    --muted: 233 6% 25%;
+    --muted: 233 6% 21%;
     --muted-foreground: 240 4% 64%;
     --accent: 228 10% 19%;
     --accent-foreground: 240 9% 89%;
@@ -66,8 +62,8 @@
     --destructive-foreground: 240 9% 89%;
     --success: 118 49% 48%;
     --success-foreground: 240 9% 89%;
-    --border: 0 0% 24%;
-    --input: 0 0% 24%;
+    --border: 233 6% 24%;
+    --input: 233 6% 31%;
     --ring: 224.3 76.3% 48%;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
